# qtsourceview

./: .gitignore  README.md  qtsourceview.dox  qtsourceview.pro  readme
src/: qate.pri  (+3 more)
tools/qtsourceview/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.tarball  qtsourceview.dox  qtsourceview.pro  readme
tools/qtsourceview/data/colors/: gedit.xml  kate.xml  turbo.xml  vim.xml  visual.xml
tools/qtsourceview/demos/: CMakeLists.txt
tools/qtsourceview/demos/demo-qate/: demo-qate.cpp  demo-qate.pro  demo6.cpp  demo6.pro
tools/qtsourceview/demos/demo-qate2/: demo-qate2.cpp  demo-qate2.h
tools/qtsourceview/demos/demo-qate4/: demo-qate4.cpp  demo-qate4.h  qatehighlighter.cpp  qatehighlighter.h
tools/qtsourceview/demos/demo1/: CMakeLists.txt  demo1.kdevelop  demo1.pro  main1.cpp  mainwindow1.cpp  mainwindow1.h  mainwindow1.ui
tools/qtsourceview/demos/demo2/: demo2.pro  demo2.pro_debug  main.cpp  main2.cpp  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui
tools/qtsourceview/demos/demo3/: demo2.pro  demo3.pro  main3.cpp  mainwindow2.cpp  mainwindow2.h  mainwindow3.cpp  mainwindow3.h  mainwindow3.ui
tools/qtsourceview/demos/demo4/: bannermessage.ui  colorsmodel.cpp  colorsmodel.h  configdialog.ui  demo4-debug.pro  demo4.cpp  demo4.pro  editorconfig.cpp  editorconfig.h  filemessage.ui  findwidget.ui  gotolinewidget.ui  lineseditor.cpp  lineseditor.h  main4.cpp  mainwindow.ui  mainwindowimpl.cpp  mainwindowimpl.h  newlineedit.cpp  newlineedit.h  privateblockdata.cpp  privateblockdata.h  qsvdefaulthighlighter.cpp  qsvdefaulthighlighter.h  qsveditor.cpp  qsveditor.h  qsveditorpanel.h  qsvsyntaxhighlighterbase.cpp  qsvsyntaxhighlighterbase.h  qsvtextedit.cpp  qsvtextedit.h  qsvtextoperationswidget.cpp  qsvtextoperationswidget.h  replacewidget.ui  samplepanel.cpp  samplepanel.h  searchform.ui  textlines.qrc  transparentwidget.cpp  transparentwidget.h
tools/qtsourceview/demos/demo5/: demo5.pro  demo7.pro  main5.cpp  main7.cpp  mainwindow5.cpp  mainwindow5.h  qsveditorpanel.cpp  qsveditorpanel.h  qsvsyntaxhighlighterbase.cpp  qsvsyntaxhighlighterbase.h  qsvtextedit.cpp  qsvtextedit.h  qsvtextoperationswidget.cpp  qsvtextoperationswidget.h  readme.txt  replaceform.ui  searchform.ui
tools/qtsourceview/demos/demo6/: demo6.cpp  demo6.pro  main6.cpp
tools/qtsourceview/demos/haiq-plugin/: haiq-qtsourceview.pro  qsvhaiqeditor.cpp  qsvhaiqeditor.h  qsvhaiqeditorinterface.cpp  qsvhaiqeditorinterface.h
tools/qtsourceview/doc/html/: annotated.html  bug.html  classQOrderedMap-members.html  classQOrderedMap.html  classQsvColorDef-members.html  classQsvColorDef.html  classQsvColorDefFactory-members.html  classQsvColorDefFactory.html  classQsvLangDef-members.html  classQsvLangDef.html  classQsvLangDefFactory-members.html  classQsvLangDefFactory.html  classQsvSyntaxHighlighter-members.html  classQsvSyntaxHighlighter.html  debug__info_8h-source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  pages.html  qorderedmap_8h-source.html  qsvcolordef_8h-source.html  qsvcolordef_8h.html  (+14 more)
tools/qtsourceview/qate/: formats.cpp  formats.h  main.cpp  qate-simple-demo.cpp  qate.pro
tools/qtsourceview/src/: CMakeLists.txt  debug_info.h  kateitemdata.cpp  kateitemdata.h  kateitemdatamanager.cpp  kateitemdatamanager.h  mime.types  qate.pri  qegtkhighlighter.cpp  qegtkhighlighter.h  qegtklangdef.cpp  qegtklangdef.h  qelangdeffactory.cpp  qelangdeffactory.h  qorderedmap.h  qsvcolordef.cpp  qsvcolordef.h  qsvcolordeffactory.cpp  qsvcolordeffactory.h  qsvlangdef.cpp  qsvlangdef.h  qsvlangdeffactory.cpp  qsvlangdeffactory.h  qsvsh.pri  qsvsyntaxhighlighter.cpp  qsvsyntaxhighlighter.h  src.pro
tools/qtsourceview/tests/: highlight.pas
(+46 files in other folders)
